[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/StartingScene/scripts/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/StartingScene/ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/GameLevels/start4.png" type="Texture" id=3]
[ext_resource path="res://assets/GameLevels/start2.png" type="Texture" id=4]
[ext_resource path="res://assets/GameLevels/start3.png" type="Texture" id=5]
[ext_resource path="res://assets/GameLevels/quit3.png" type="Texture" id=6]
[ext_resource path="res://assets/GameLevels/quit2.png" type="Texture" id=7]
[ext_resource path="res://assets/GameLevels/quit1.png" type="Texture" id=8]

[node name="Node2D" type="Node2D"]
position = Vector2( 709, 282 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -228.0
margin_top = 15.0
margin_right = 63.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Off 2023"
align = 1

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="Start" type="TextureButton" parent="."]
margin_left = -170.0
margin_top = 54.0
margin_right = -2.0
margin_bottom = 126.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[node name="Quit" type="TextureButton" parent="."]
margin_left = -169.0
margin_top = 135.0
margin_right = -1.0
margin_bottom = 207.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[connection signal="button_down" from="Start" to="." method="_on_Start_button_down"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="button_down" from="Quit" to="." method="_on_Quit_button_down"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
